fix blurry pixel art on chrome browsers

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,7 +113,7 @@ img {
 	margin: 0 auto;
 	width: 80%;
 	height: 80%;
-	image-rendering: auto;
+	image-rendering: pixelated;
         image-rendering: crisp-edges;
         image-rendering: -moz-crisp-edges;
 }
